--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,11 @@ sonar.host.url=http://sonar.smartcampus.uniajc.edu.co:9000
 
 # DATABASE
 # User credentials.
-sonar.jdbc.username=postgres
-sonar.jdbc.password=postgres
+#sonar.jdbc.username=truequeo
+#sonar.jdbc.password=truequeo
 
 #----- PostgreSQL 8.x/9.x
-sonar.jdbc.url=jdbc:postgresql://sonar.smartcampus.uniajc.edu.co:5436/sonar
+#sonar.jdbc.url=jdbc:postgresql://sonar.smartcampus.uniajc.edu.co:5436/sonar
 
 # Required metadata
 sonar.projectKey=truequeo
