--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,16 @@ sonar.host.url=http://sonar.smartcampus.uniajc.edu.co:9000
 
 # DATABASE
 # User credentials.
-#sonar.jdbc.username=truequeo
-#sonar.jdbc.password=truequeo
+sonar.jdbc.username=root
+sonar.jdbc.password=
 
 #----- PostgreSQL 8.x/9.x
 #sonar.jdbc.url=jdbc:postgresql://sonar.smartcampus.uniajc.edu.co:5436/sonar
+
+#----- MySQL 5.6 or greater
+# Only InnoDB storage engine is supported (not myISAM).
+# Only the bundled driver is supported. It can not be changed.
+sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
 
 # Required metadata
 sonar.projectKey=truequeo
