--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 #----- Default SonarQube server
-sonar.host.url=http://sonar.smartcampus.uniajc.edu.co:9000
+sonar.host.url=http://localhost:9000
 
 # DATABASE
 # User credentials.
