--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,12 @@ sonar.host.url=http://localhost:9000
 
 # DATABASE
 # User credentials.
-sonar.jdbc.username=root
-sonar.jdbc.password=
+#sonar.jdbc.username=root
+#sonar.jdbc.password=
+
+#----- Embedded Database (default)
+# H2 embedded database server listening port, defaults to 9092
+sonar.embeddedDatabase.port=9092
 
 #----- PostgreSQL 8.x/9.x
 #sonar.jdbc.url=jdbc:postgresql://sonar.smartcampus.uniajc.edu.co:5436/sonar
@@ -12,7 +16,7 @@ sonar.jdbc.password=
 #----- MySQL 5.6 or greater
 # Only InnoDB storage engine is supported (not myISAM).
 # Only the bundled driver is supported. It can not be changed.
-sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
+#sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false
 
 # Required metadata
 sonar.projectKey=truequeo
