--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.java.binaries=/truequeo/target/classes
 sonar.sources=/truequeo/app/,/truequeo/tests
 
 #sonar.projectBaseDir=C:/Users/julia/.jenkins/workspace/truequeo
-sonar.projectBaseDir=C:/Users/julia/.jenkins/workspace/truequeo
+sonar.projectBaseDir=C:\Users\julia\.jenkins\workspace\truequeo
 
 # Path to the parent source code directory.
 sonar.sources=app, resources/views
